fix(styles): better z-index

--- a/blocks/filters/assets/styles/style.scss
+++ b/blocks/filters/assets/styles/style.scss
@@ -8,7 +8,7 @@
 .wp-block-mps-filters {
   display: grid;
   position: absolute !important;
-  z-index: 99999;
+  z-index: 1001;
   top: 0;
   bottom: 0;
   left: 0;
