--- a/blocks/sidebar/assets/styles/style.scss
+++ b/blocks/sidebar/assets/styles/style.scss
@@ -15,7 +15,7 @@
 
 .wp-block-mps-sidebar {
   display: flex;
-  z-index: 9999;
+  z-index: 1001;
   flex-direction: column;
   width: 100%;
   height: inherit;
